--- a/api/Osc.yaml
+++ b/api/Osc.yaml
@@ -57,7 +57,10 @@ classes:
           parameters:
           - { name: value, type: bool }
           cppname: addBoolean
-
+        - name: add
+          parameters:
+          - { name: value, type: "null" }
+          cppname: addNull
 
     - name: Output
       cppname: OscOutput
