--- a/api/Osc.yaml
+++ b/api/Osc.yaml
@@ -61,6 +61,9 @@ classes:
           parameters:
           - { name: value, type: "null" }
           cppname: addNull
+        - name: path
+          cppname: getPath
+          returns: string
 
     - name: Output
       cppname: OscOutput
