--- a/api/Midi.yaml
+++ b/api/Midi.yaml
@@ -20,8 +20,8 @@ name : Midi
 interfaces:
 
     - name: Source
-      cppname: EventSource
-      include: eventconnection
+      cppname: MidiSource
+      include: midiconnection
 
     - name: Sink
       cppname: MidiSink
