--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ aux_source_directory("btrack" SRC_LIST)
 aux_source_directory("squirrel/squirrel" SRC_LIST)
 aux_source_directory("squirrel/sqstdlib" SRC_LIST)
 aux_source_directory("tinymml" SRC_LIST)
+aux_source_directory("tlsf" SRC_LIST)
 
 include_directories("src")
 include_directories("bindings")
@@ -19,6 +20,7 @@ include_directories("abcmidi")
 include_directories("btrack")
 include_directories("squirrel/include")
 include_directories("tinymml")
+include_directories("tlsf")
 
 add_definitions(-DANSILIBS)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
