bindings specify release policy for object return values

--- a/api/Audio.yaml
+++ b/api/Audio.yaml
@@ -27,6 +27,7 @@ interfaces:
           cppname: getAudioConnection
           parameters: { name: channel, type: integer }
           returns: Audio.Output
+          release: none
 
     - name: Sink
       methods:
