--- a/api/Midi.yaml
+++ b/api/Midi.yaml
@@ -71,6 +71,7 @@ classes :
       methods:
         - name: read
           returns: Midi.Pattern
+          release: delete
           parameters:
             - {name: abc, type: string}
             - {name: key, type: string, optional: true }
@@ -79,6 +80,7 @@ classes :
             - {name: rhythm, type: string, optional: true }
         - name: readTune
           returns: Midi.Tune
+          release: delete
           parameters:
             - {name: abc, type: string}
 
@@ -88,6 +90,7 @@ classes :
       methods:
         - name: read
           returns: Midi.Pattern
+          release: delete
           parameters:
             - { name: chord, type: string }
             - {name: duration, type: integer}
@@ -99,6 +102,7 @@ classes :
       methods:
       - name: read
         returns: Midi.Pattern
+        release: delete
         parameters: {name: tab, type: string}
       - name: velocity
         cppname: setVelocity
@@ -161,6 +165,7 @@ classes :
       methods:
         - name: read
           returns: Midi.Pattern
+          release: delete
           parameters:
             - {name: mml, type: string}
 
@@ -181,6 +186,7 @@ classes :
         - name: note
           parameters: {name: index, type: integer}
           returns: Midi.Note
+          release: none
           cppname: getNote
         - name: print
         - name: transpose
@@ -190,10 +196,13 @@ classes :
     - name: Tune
       cppname: MidiTune
       include: miditune
+      ctor:
+        parameters: { name: tracks, type: integer }
       methods:
         - name: timeSignature
           cppname: getTimeSignature
           returns: Transport.TimeSignature
+          release: delete
         - name: title
           cppname: getTitle
           returns: string
@@ -201,6 +210,7 @@ classes :
           returns: integer
         - name: track
           returns: Midi.Pattern
+          release: none
           parameters:
             - {name: number, type: integer}
 
