--- a/api/Midi.yaml
+++ b/api/Midi.yaml
@@ -17,6 +17,18 @@
 
 name : Midi
 
+methods:
+
+    - name: abc
+      include: midipackage
+      returns: Midi.Pattern
+      release: delete
+      parameters:
+        - {name: abc, type: string}
+        - {name: key, type: string, optional: true }
+        - {name: noteLength, type: string, optional: true }
+        - {name: meter, type: string, optional: true }
+
 interfaces:
 
     - name: Message
