--- a/api/Osc.yaml
+++ b/api/Osc.yaml
@@ -19,13 +19,12 @@ name : Osc
 
 classes:
     - name: Input
-      cppname: OscInput
       include: oscinput
       ctor:
         parameters:
         - { name: port, type: integer }
         - { name: protocol, type: string, optional: true }
-        expression: OscInputFactory::instance().getOscInput
+        expression: osc::InputFactory::instance().getOscInput
       methods:
         - name: onReceive
           parameters:
@@ -35,7 +34,6 @@ classes:
           returns: string
 
     - name: Message
-      cppname: OscMessage
       include: oscmessage
       ctor:
         parameters:
@@ -71,14 +69,13 @@ classes:
           cppname: getPath
           returns: string
 
-    - name: Output
-      cppname: OscOutput
+    - name: Output     
       include: oscoutput
       ctor:
         parameters:
         - { name: host, type: string }
         - { name: port, type: integer }
-        expression: OscOutputFactory::instance().getOscOutput
+        expression: osc::OutputFactory::instance().getOscOutput
       methods:
         - name: schedule
           parameters:
